--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
     "gh-pages": "^6.1.1",
+    "netlify-cli": "^17.19.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
